wcfsetup/install/files/acp/style/wcf.css
/* ... */
@media screen and (max-width: 480px), screen and (max-device-width: 480px) {
	
	.headerNavigation {
		min-width: auto;
	}
	
}

.headerNavigation:after {
	content: '';
	display: block;
	clear: both;
}

.headerNavigation > div {
	padding: 0 7px;
}

.headerNavigation > div:after {
	content: '';
	display: block;
	clear: both;
}

.headerNavigation ul,
.footerNavigation ul {
	display: block;
}

.headerNavigation ul li,
.footerNavigation ul li {
	cursor: pointer;
	margin: 0 3px;
	float: right;
	position: relative;
	z-index: 190;
}

.headerNavigation ul li a,
.footerNavigation ul li a {
	padding: 3px;
	display: inline-block;
}

.headerNavigation ul li a:hover,
.footerNavigation ul li a:hover {
	text-decoration: none;
	background-color: #d8e7f5;
}

.headerNavigation ul li a:hover:active,
.headerNavigation ul li a:hover:focus,
.footerNavigation ul li a:hover:active,
.footerNavigation ul li a:hover:focus {
	background-color: #fff9f4;
}

/* Special */

#tplLogin .pageHeader .headerNavigation ul li.toBottomLink,
#tplLogin .pageFooter .footerNavigation ul li.toTopLink {
	/* Removes the to-bottom-link on the log-in page */
	position: absolute;
	left: -9000px;
	top: -9000px;
	width: 0;
}

/* Special: Sub Menu */

.headerNavigation .subMenu {
	float: left;
}

.headerNavigation .subMenu > li {
	line-height: 1.25;
}

.headerNavigation .subMenu > li > a {
	padding-right: 5px;
	padding-left: 5px;
}



/* ############## Main ############## */

.main {
	background-color: #d8e7f5;
	margin: 0 23px;
	position: relative;
	
	-webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
	-moz-box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
	-ms-box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
	-o-box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
	box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
}

@media screen and (min-width: 480px), screen and (min-device-width: 480px) {
	
	.main {
		min-width: 800px;
	}
	
}

@media screen and (max-width: 480px), screen and (max-device-width: 480px) {
	
	.main {
		min-width: auto;
	}
	
}



/* -- -- -- Content -- -- -- */

/* ToDo: Change the class name, since now we have the class "content" 2 times! */

section.content {
	background-color: rgba(255, 255, 255, 1);
	position: relative;
	min-height: 100px;
	z-index: 100;
	
	-webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .1);
	-moz-box-shadow: 0 0 5px rgba(0, 0, 0, .1);
	-ms-box-shadow: 0 0 50pxrgba(0, 0, 0, .1);
	/* ToDo: Opera doesn't like that so much! Bug-report sent to Opera 
	-o-box-shadow: 0 0 5px rgba(0, 0, 0, .1);
	box-shadow: 0 0 5px rgba(0, 0, 0, .1);*/
	
	-webkit-transition: margin .1s ease;
	-moz-transition: margin .1s ease;
	-ms-transition: margin .1s ease;
	-o-transition: margin .1s ease;
	transition: margin .1s ease;
}

section.content:after {
	content: '';
	display: block;
	clear: both;
}

.left section.content {
	border-left: 1px solid rgba(187, 204, 221, 1);
	margin-left: 249px;
}

.right section.content {
	border-right: 1px solid rgba(187, 204, 221, 1);
	margin-right: 249px;
}

/* ToDo: The sidebar should be removed completely, when there is no content, as on the login-page and similar! Then this declaration would work as expected. */
.main > div section:only-child {
	margin: 0 !important;
}

@media screen and (min-width: 480px), screen and (min-device-width: 480px) {
	
	section.content {
		padding: 5px 40px 20px;
	}
	
}	

@media screen and (max-width: 480px), screen and (max-device-width: 480px) {
	
	section.content {
		padding: 5px 15px 20px;
	}
	
}	

section.content .content {
	/* Test: border: 1px solid #ccc;*/
	background-color: rgba(0, 0, 0, .01);
	padding: 13px 23px 23px;
}



/* -- -- -- Content Header & Footer -- -- -- */

.contentHeader,
.contentFooter {
	margin-top: 15px;
}



/* ############## Sidebar ############## */

/* Globals */

.sidebar {
	margin-bottom: -10px;
	display: block;
	width: 250px;
	overflow: hidden;
	z-index: 80;
	
	-webkit-transition: width .1s ease;
	-moz-transition: width .1s ease;
	-ms-transition: width .1s ease;
	-o-transition: width .1s ease;
	transition: width .1s ease;
}

/* Toggle for sidebar orientation (options: left|right|top|bottom) */

.left .sidebar {
	float: left;
}

.right .sidebar {
	float: right;
}



/* -- -- -- Collapsible Sidebar -- -- -- */

/* Globals */

.collapsed {
	width: 0;
	height: 0;
}

.left .sidebar.collapsed + .content {
	border: 0;
	margin-left: 0;
}

.right .sidebar.collapsed + .content {
	border: 0;
	margin-right: 0;
}



/* -- -- -- Collapsible Sidebar Button -- -- -- */

/* Globals */

.sidebar .collapsibleSidebarButton {
	cursor: pointer;
	background-position: center 1%, center 99%;
	background-size: 10px 10px, 10px 10px;
	background-repeat: no-repeat;
	position: absolute;
	top: 0;
	bottom: 0;
	width: 20px;
	height: 100%;
	overflow: hidden;
	z-index: 150;
	opacity: .3;
}

/* Orientation */

.left .collapsibleSidebarButton {
	background-image: url('../../icon/arrowLeft1.svg'), url('../../icon/arrowLeft1.svg');
	left: 250px;
	
	-webkit-transition: left .1s ease;
	-moz-transition: left .1s ease;
	-ms-transition: left .1s ease;
	-o-transition: left .1s ease;
	transition: left .1s ease;
}

.right .collapsibleSidebarButton {
	background-image: url('../../icon/arrowRight1.svg'), url('../../icon/arrowRight1.svg');
	right: 250px;
	
	-webkit-transition: right .1s ease;
	-moz-transition: right .1s ease;
	-ms-transition: right .1s ease;
	-o-transition: right .1s ease;
	transition: right .1s ease;
}

.sidebar .collapsibleSidebarButton span {
	background-color: rgba(255, 255, 255, 1);
    background-position: center center;
	background-size: 10px 10px;
	background-repeat: no-repeat;
	margin-top: -300px;
	display: block;
	position: absolute;
	top: 50%;
	width: 20px;
	height: 600px;
}

.left .collapsibleSidebarButton span {
	background-image: url('../../icon/arrowLeft1.svg');
}

.right .collapsibleSidebarButton span {
	background-image: url('../../icon/arrowRight1.svg');
}
/* ... */

